# INSY-674

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MANIFEST.in  MODEL_CARD.md  Makefile  README.md  heroku.yml  pyproject.toml  render.yaml  setup.py  tox.ini
.github/workflows/: ci.yml
app-fastapi/: Procfile  requirements.txt  run.sh
app-fastapi/app/: api.py  config.py  main.py  schemas.py
app-fastapi/app/schemas/: __init__.py  drift.py  health.py  predict.py
app-fastapi/app/tests/: conftest.py  test_api.py  test_training_artifacts.py
notebooks/: 1_data_analysis.ipynb  2_feature_engineering.ipynb  3_feature_engineering_pipeline.ipynb  4_machine_learning.ipynb
requirements/: production.txt  requirements.txt  research.txt
src/: __init__.py  config.yml  pipeline.py  predict.py  train_pipeline.py
src/config/: __init__.py  core.py
src/monitoring/: __init__.py  drift.py  test_drift.py
src/processing/: __init__.py  data_manager.py  features.py
src/trained_models/: __init__.py  employability_model_v0.1.0_evaluation.json
